ingress/ingress-simples.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: nginx # To get this class, run kubectl get ingressclass, you will which class your provider is using
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conversao
                port:
                  number: 80  # This is the port to use with the external IP or domain
